<resources>
    <string name="app_name">Tea Point</string>

    <!--Titles-->
    <string name="login_title">Login</string>
    <string name="signup_title">Sign up</string>

    <!--Welcome messages-->
    <string name="splash_welcome_txt">Get Tea &amp; Coffee\nat your place.</string>
    <string name="login_welcome_txt">Hello there !\nWelcome Back</string>
    <string name="signup_welcome_txt">Hello there !\nWelcome to you</string>


    <!--Button labels-->
    <string name="login_btn_label">Login</string>
    <string name="signup_btn_label">Signup</string>

    <string name="login_label">" Login"</string>
    <string name="signup_label">" Signup"</string>

    <string name="login_fb_btn_label">"{faw-facebook-f}    Login with Facebook"</string>
    <string name="signup_fb_btn_label">"{faw-facebook-f}    Signup with Facebook"</string>

    <string name="get_started_btn_label">Get Started</string>

    <!--Edit Text hints-->
    <string name="email_address_hint">Email Address</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="full_name_hint">Full Name</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="Center_hint">Center Code</string>


    <!--Misc texts-->
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\’t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="divider_or">OR</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


</resources>
