<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/container_layout_margin">

            <TextView
                android:id="@+id/login_title"
                style="@style/LabelStyle"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/login_title"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/login_welcome_msg"
                style="@style/LabelStyle"
                android:layout_below="@id/login_title"
                android:layout_marginTop="@dimen/layout_in_between_margins"
                android:text="@string/login_welcome_txt" />

            <EditText
                android:id="@+id/et_login_mobile_number"
                style="@style/EditTextStyle"
                android:layout_below="@id/login_welcome_msg"
                android:layout_marginTop="@dimen/layout_in_between_margins"
                android:hint="@string/mobile_number_hint"
                android:maxLength="10"
                android:drawableLeft="@drawable/ic_action_phone"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_password"
                style="@style/EditTextStyle"
                android:drawableLeft="@drawable/ic_action_pass"
                android:layout_below="@id/et_login_mobile_number"
                android:layout_marginTop="@dimen/layout_in_between_margins"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <EditText
                android:visibility="gone"
                android:id="@+id/et_code"
                style="@style/EditTextStyle"
                android:drawableLeft="@drawable/ic_action_center_code"
                android:layout_below="@id/et_password"
                android:layout_marginTop="@dimen/layout_in_between_margins"
                android:hint="@string/Center_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_login"
                style="@style/SolidButtonStyle"
                android:layout_width="match_parent"
                android:layout_below="@id/et_code"
                android:layout_marginTop="@dimen/layout_in_between_margins"
                android:text="@string/login_btn_label" />

            <TextView
                android:id="@+id/forgot_password"
                style="@style/LabelStyle"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/btn_login"
                android:layout_marginTop="@dimen/layout_in_between_margins"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/forgot_password"
                android:textColor="@color/orange"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_login"
                android:layout_marginBottom="@dimen/divider_top_and_bottom_margins"
                android:layout_marginTop="@dimen/divider_top_and_bottom_margins">


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/sign_up_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/no_account"
                    style="@style/LabelStyle"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/no_account"
                    android:textColor="@color/account"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sign_up"
                    style="@style/LabelStyle"
                    android:layout_toEndOf="@id/no_account"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:onClick="signup"
                    android:text="@string/signup_label"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
